todo-app/manifests/db.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-db-service
  namespace: project-ns
spec:
  ports:
    - port: 5432
      name: postgres
  clusterIP: None # Headless service for stable Pod DNS names
  selector:
    app: todo-db
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: todo-db
  namespace: project-ns
spec:
  serviceName: "todo-db-service"
  replicas: 1
  selector:
    matchLabels:
      app: todo-db
  template:
    metadata:
      labels:
        app: todo-db
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: todo-persistent-storage
              mountPath: /var/lib/postgresql # Adjusted to parent dir to prevent version 18+ upgrade mismatch issues
  volumeClaimTemplates:
    - metadata:
        name: todo-persistent-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
